2010-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c src/internal.c src/internal.h docs/gnuplot.doc:
	New function value("X") returns the value of a variable named X.
	A = "foo"
	value("A") returns "foo"
	value(A) returns NaN, because there is no variable named foo
	value(2) returns 2 (numeric expressions have a natural value)
	Among other things, this allows you to read variable names from
	a data file and use the current value of those variables in a plot.

	* src/util.c (gprintf):  Handle formats x/X/o/O for values that
	overflow (int) by switching to llx/llX/llo/llO and (long long).
	NB: This does _not_ extend the representation of negative numbers
	to 64 bits unless the representation overflows 32 bits.

2010-09-16  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg2.plt tutorial/eg6.plt tutorial/test_tikz.plt 
	tutorial/Makefile.am.in tutorial/header.tex tutorial/tutorial.tex:
	Update the LaTeX tutorial a bit.  More could be done.

2010-09-15  Ingo Thies  <ingo.thies@gmx.de>

	* src/graph3d.c src/graph3d.h src/mouse.c src/set.c src/unset.c:
	Switch the middle button left/right mouse zoom behaviour in 3D plots
	so that the zoom response is logarithmic.  

2010-09-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm:  As of libgd 2.0.36 you can now specify a TrueType font
	using either Fontconfig syntax or using the font file name directly.
	But switching from one form to the other was only possible as an 
	option of "set terminal".  This patch enables us to specify these two
	forms of the font name in "set title", "set xlabel", and so on.

2010-09-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (strlen_tex):  Add a special-case routine to
	estimate the true number of output characters in a LaTeX string
	containing markup. This is not a real LaTeX parser, but even a poor
	estimate is better than just calling strlen().
	Bug #1603348 and others
