@@ -1,3 +1,11 @@
+2010-09-19  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (edge_intersect):  If for some reason we fail to
+	find find the intersection points of a vector both of whose ends
+	are out of range, issue a warning, pick an edge, and continue.
+	I can't see any good reason to treat this as a fatal error.
+	Bug #2824879
+
 2010-09-18  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/eval.c src/internal.c src/internal.h docs/gnuplot.doc:
